more dtx doc update

--- a/TODO
+++ b/TODO
@@ -133,3 +133,5 @@ restricted to marginclue and index though
 
 * The index layout should be handled by fixme@text, but IIRC, I had macro
 expansion problems when trying to do so.
+
+* Replace ~ with \nobreak space ?
