--- a/fixme.dtx
+++ b/fixme.dtx
@@ -982,31 +982,25 @@
 %    \end{macrocode}
 %
 % \subsection{\fixme{} environments}
-% \fixme{} environments use the corresponding macro version to handle
-% |inline|, |marginclue| and possibly |index| layout in |draft| mode, and to
-% perform logging. In |final| mode, |verbatim|'s \texttt{comment} environment
-% is used to suppress output.
+% \fixme{} environments are always laid out inline. The environment's summary
+% is laid out by the corresponding macro, but the |inline| layout is disabled.
+% In |final| mode, |verbatim|'s \texttt{comment} environment is used to
+% suppress output.
 % \subsubsection{Layout}
 %    \begin{macrocode}
-\newcommand\FXEnvBegin{\begin{quotation}}
+\newcommand\FXEnvBegin[1]{\begin{quotation}
+    \textbf{#1:}}
 \newcommand\FXEnvEnd{\end{quotation}}
 
 %    \end{macrocode}
 % \subsubsection{\texttt{final} and \texttt{draft} versions}
 %    \begin{macrocode}
-\def\@fxenvbegin@draft#1#2{%
-  \FXEnvBegin
-  \edef\fixme@args{inline%
-    \iffx@layout@index,index\fi%
-    \iffx@layout@marginclue,marginclue\fi}%
-  \csname#1\endcsname[\fixme@args]{#2}}
-\def\@fxenvbegin@final#1#2{
-  \edef\fixme@args{inline%
-    \iffx@layout@index,index\fi%
-    \iffx@layout@marginclue,marginclue\fi}%
-  \csname#1\endcsname[\fixme@args]{#2}
-  \comment
-}
+\def\@fxenvbegin@draft#1#2#3#4{%
+  \csname#1\endcsname[#3,noinline]{#4}%
+  \FXEnvBegin{\csname fixme#2prefix\endcsname}}
+\def\@fxenvbegin@final#1#2#3#4{%
+  \csname#1\endcsname[#3]{#4}%
+  \comment}
 
 \def\@fxenvend@draft{\FXEnvEnd}
 \def\@fxenvend@final{\endcomment}
@@ -1014,18 +1008,19 @@
 %    \end{macrocode}
 %
 % \subsubsection{Actual environments}
+% ^^A #### FIXME: after renaming, remove 2nd argument to these environments
 %    \begin{macrocode}
-\newenvironment{anfxnote}[1][]{%
-  \@fxenvbegin{fxnote}{#1}}{%
+\newenvironment{anfxnote}[2][]{%
+  \@fxenvbegin{fxnote}{note}{#1}{#2}}{%
   \@fxenvend}
-\newenvironment{anfxwarning}[1][]{%
-  \@fxenvbegin{fxwarning}{#1}}{%
+\newenvironment{anfxwarning}[2][]{%
+  \@fxenvbegin{fxwarning}{warning}{#1}{#2}}{%
   \@fxenvend}
-\newenvironment{anfxerror}[1][]{%
-  \@fxenvbegin{fxerror}{#1}}{%
+\newenvironment{anfxerror}[2][]{%
+  \@fxenvbegin{fxerror}{error}{#1}{#2}}{%
   \@fxenvend}
-\newenvironment{afixme}[1][]{%
-  \@fxenvbegin{fixme}{#1}}{%
+\newenvironment{afixme}[2][]{%
+  \@fxenvbegin{fixme}{fatal}{#1}{#2}}{%
   \@fxenvend}
 
 %    \end{macrocode}
