new layout option marginfallback

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -767,6 +767,9 @@
 \fx@declarebooloptkey{layout}{user}
 \fx@declarebooloptkey{layout}{index}
 
+\fx@declarecmdoptkey[inline]{layout}{marginfallback}
+\fx@layout@marginfallback{inline}
+
 %    \end{macrocode}
 %
 % \subsection{Logging}
