--- a/fixme.dtx
+++ b/fixme.dtx
@@ -767,8 +767,8 @@
 \fx@declarebooloptkey{layout}{user}
 \fx@declarebooloptkey{layout}{index}
 
-\fx@declarecmdoptkey[inline]{layout}{marginfallback}
-\fx@layout@marginfallback{inline}
+\fx@declarecmdoptkey[inline]{layout}{innerfallback}
+\fx@layout@innerfallback{inline}
 
 %    \end{macrocode}
 %
