typo fix in \@fxdeprecation warning message

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -532,7 +532,7 @@
 \newcommand\@fxdeprecationwarning[2]{%
   \PackageWarning{FiXme}{%
     \expandafter\string\csname #1\endcsname\space is deprecated;
-    Please use \expandafter\string \csname #2\endcsname\space instead,}}
+    please use \expandafter\string \csname #2\endcsname\space instead,}}
 
 %    \end{macrocode}
 %
